apps/base/authentik/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: authentik
spec:
  redirectScheme:
    scheme: https
    permanent: true
