apps/base/authentik/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: authentik
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
  type: ClusterIP
